gitlab/gitlab-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: gitlab-catch-all
#   namespace: gitlab
# spec:
#   ingressClassName: gitlab-nginx
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: gitlab-webservice-default
#             port:
#               number: 8181

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-catch-all
  namespace: gitlab
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: gitlab-nginx
  rules:
  - host: nhqb-gitlab.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-webservice-default
            port:
              number: 8181
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-webservice-default
            port:
              number: 8181
